# ec2-cloudflare-dns-updater

./: .gitignore  README.md  complete.py  config.py.example  init.sh  main.py  mod.py  post_init.py  pre_init.py  pyproject.toml  run.sh  update.py  update.sh
ec2_cloudflare_dns_updater/: __main__.py  config.py.example  main.py  mod.py
